# sat-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  flake.nix
.github/: README.md
.github/workflows/: ci.yml
src/: cnfparser.rs  lib.rs  main.rs  notation.rs  utils.rs
src/notation/: clauses.rs  literals.rs  mod.rs  problem.rs  variables.rs
src/parser/: cnfparser.rs  mod.rs
src/solvers/: chaos.rs  gsat.rs  interactive.rs  mod.rs  syntactic.rs  utils.rs  wsat.rs
tests/: chaos_test.rs  cnfparser_test.rs  evaluate_test.rs  gsat_test.rs  parser_test.rs  wsat_test.rs
