[package]
name = "sat-rs"
version = "0.0.3"
license = "MIT"
description = "A SAT solver written in Rust"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap-verbosity-flag = "3.0.1"
rand = "0.9.0"
